deployment/aws/product-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productapp
  labels:
    app: productapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productapp
  template:
    metadata:
      labels:
        app: productapp
    spec:
      containers:
        - name: productapp
          image: yuzarsifkilic/product-service:1.0.21
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
  selector:
    app: productapp
