deployment/aws/stock-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockapp
  labels:
    app: stockapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockapp
  template:
    metadata:
      labels:
        app: stockapp
    spec:
      containers:
        - name: stockapp
          image: yuzarsifkilic/stock-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: stock-service
spec:
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
  selector:
    app: stockapp
